# password-manager

./: BUILD.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.kiro/: project-analysis.md
scripts/: generate-icns.sh  generate-ico.js  generate-icons.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs
src/components/: ConfirmationModal.jsx  Dashboard.jsx  ImportWizard.jsx  Login.jsx  PasswordDetail.jsx  PasswordModal.jsx  Settings.jsx  Setup.jsx
