[package]
name = "app"
version = "0.1.0"
description = "Secure local password manager"
authors = ["maromiya"]
license = "MIT"
repository = "https://github.com/izm4457/password-manager"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
argon2 = "0.5.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.8.2"

[profile.release]
# バイナリサイズを最小化
strip = true          # デバッグシンボルを削除
opt-level = "z"       # サイズ最適化
lto = true            # Link Time Optimization
codegen-units = 1     # 並列コンパイルを無効化してサイズ削減
panic = "abort"       # パニック時のスタック巻き戻しを無効化
